# demo2prd

./: AGENTS.md  CLAUDE.md  INSTALL.md  README.md  proto-to-requirement-skill-需求规格说明书.md  pyproject.toml
.agent/: ARCHITECTURE.md  BLOCKERS.md  CURRENT_TASK.md  PLAN.md  REVIEW.md  SPEC.md  WORK_LOG.md  run-worker-dangerously.sh
.claude/: settings.json
.claude/hooks/: guard_allowed_files.py  guard_planner_docs.py  stop_check.sh
.omc/skills/: codex-worker-protocol.md
bdd-engineering-prd-writer/: SKILL.md
proto-pm-interviewer/: SKILL.md
proto-pm-interviewer/templates/: question-checklist-template.md
proto-to-requirement/: SKILL.md
proto-to-requirement/references/: prd-writing-prompt.md
proto_to_requirement/: __init__.py  cli.py  extract.py  models.py  normalize.py  probe.py  render.py  unpack.py
tests/: conftest.py  test_cli.py  test_extract.py  test_normalize.py  test_probe.py  test_render.py  test_skill_prd_prompt.py  test_skill_suite.py  test_unpack.py
tests/fixtures/mockitt_export/extra/: data.0.js  data.1.js
