[project]
name = "proto-to-requirement"
version = "0.1.0"
description = "Convert prototype exports into structured requirement documents"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
proto-to-requirement = "proto_to_requirement.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
